# chat-langchain

./: .env.example  .gitignore  ANALYSE_LANGSERVE_VS_MASTER.md  ANALYSE_QUALITATIVE_HERO_VS_PRAGMATIC.md  CHANGELOG.md  CLAUDE.md  DOCUMENTATION_WRAPPERS_PNL.md  LANGGRAPH_403_QUICK_REFERENCE.md  LANGGRAPH_DEV_VS_CLOUD.md  QUICK_START.md  RAPPORT_BENCHMARK_FINAL.md  README.md  SETUP_SELF_HOSTED.md  STRATEGIE_LOCAL_VS_APIS.md  TEST_MANUEL_MCP_SONNET45.md  TROUBLESHOOTING.md  docker-compose.yml  pyproject.toml  setup_env.sh  start_langgraph.sh  test_sonnet45_backend.py  verify_mcp_config.md
mcp_server/: DEEPSEEK_INCOMPATIBILITY.md  FINAL_BENCHMARK_REPORT.md  MANUAL_START.md  QUICK_START.md  README.md  REFACTORING_SUMMARY.md  SPEED_ANALYSIS.md  STATUS.md  TROUBLESHOOTING_MCP.md  VERIFICATION_COMPLETE.md  benchmark_hero_vs_pragmatic.py  benchmark_models.py  claude_desktop_config.json  langchain_expert.py  pyproject.toml  test_mcp_sonnet45.py
mcp_server/archive/: DEEPSEEK_INCOMPATIBILITY.md  DEEP_MODE_TIMEOUT_ANALYSIS.md  FINAL_BENCHMARK_REPORT.md  QUALITY_EVALUATION.md  RESOLUTION_PROBLEME_PATH.md  SPEED_ANALYSIS.md  TIMEOUT_FIX_SUMMARY.md  VERIFICATION_COMPLETE.md  analyze_quality.py  analyze_quality_direct.py  gpt5_performance_results.json  measure_gpt5_performance.py  test_mcp.py  test_model_verification.py  test_startup.py
mcp_server/results/: BENCHMARK_REPORT.md  deepseek-chat_results.json  deepseek-reasoner_results.json  gpt5-mini_results.json  hero_vs_pragmatic_llama-3.3-70b-groq_results.json  llama-3.3-70b-groq_results.json  quality_analysis.json  (+1 more)
(+43 files in other folders)
