[project]
name = "langchain-expert-mcp"
version = "0.1.0"
description = "MCP server providing LangChain/LangGraph expert access via RAG"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "langgraph-sdk>=0.1.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build]
only-include = ["langchain_expert.py"]

[tool.hatch.build.targets.wheel]
py-modules = ["langchain_expert"]
